--- a/LearnHtml/IndexTable15.html
+++ b/LearnHtml/IndexTable15.html
@@ -7,6 +7,7 @@
     <meta name="description" content="This Is Our Book Store" />
   </head>
   <body>
+    <hr>
     <h1>Book Store</h1>
     <p>This Is My <b>Book Store</b>, Welcome</p>
     <!--
@@ -52,5 +53,34 @@
       </tr>
     </table>
     
+    <hr>
+    <header>
+    <h1>اسم الموقع</h1>
+    <nav>
+      <a href="#home">الرئيسية</a>
+      <a href="#news">الأخبار</a>
+    </nav>
+  </header>
+
+  <main>
+    <article>
+      <h2>مقال رئيسي</h2>
+      <p>محتوى المقال هنا...</p>
+    </article>
+
+    <section>
+      <h3>أقسام فرعية</h3>
+      <p>محتوى إضافي...</p>
+    </section>
+  </main>
+
+  <aside>
+    <h4>إعلانات</h4>
+    <p>محتويات جانبية...</p>
+  </aside>
+
+  <footer>
+    <p>اتصل بنا: contact@example.com</p>
+  </footer>
   </body>
 </html>
