--- a/LearnHtml/Index.html
+++ b/LearnHtml/Index.html
@@ -1,7 +1,8 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+       
         <!-- معرفة اليونيكود من أجل اللغة العربية -->
         <meta charset="utf-8"/>
         <!-- عنوان الصفحة -->
