--- a/LearnHtml/Tajarp.html
+++ b/LearnHtml/Tajarp.html
@@ -103,7 +103,35 @@
         
     </tr>
 </table>
-
-
+<hr>
+<p>Amr</p>
+<audio controls  autoplay >
+  <source src="Audo/١٩سبتمبر ٧.٠٣ م.mp3" type="audio/mpeg" > 
+</audio>
+<hr>
+<video controls style="width: 300px;height: 300px;">
+  <source src="../../../../../../../تحزيم برنامج إدارة العيادات - C_ _ Sql Server عن طريق  Advanced Installer_(360P).mp4">
+<source src="https://youtu.be/wMGtBnUtJVU?si=PVDLjaIdRbPbjr0c.mp4">
+<track src="my_file_en.vtt" kind="subtitles" srclang="en" label="English">
+      <track src="my_file_it.vtt" kind="subtitles" srclang="it" label="Italian">
+      <track src="my_file_ar.vtt" kind="Arabi" srclang="ar" label="Arabi">
+</video>
+<hr>
+<form>
+ <div>
+  <label>Usre name</label>
+  <input type="text">
+ </div>
+ <br>
+ <div>
+  <label>password</label>
+  <input type="password">
+ </div>
+ <div>
+  <br>
+  <label>Erth Date</label>
+  <input type="datetime-local">
+ </div>
+</form>
 </body>
 </html>
